river.css
html, body {
	height: 100%;
	overflow: hidden;
}

body {
	background: #ddd;

	display: -webkit-flex;
	display: flex;

	-webkit-flex-direction: column;
	flex-direction: column;

	font-family: sans-serif;
	margin: 0;

	-webkit-user-select: none;
	user-select: none;

	-webkit-text-size-adjust: 100%;
}

body, .input {
	font-size: 16px;
}

.password {
	background: white;

	display: -webkit-flex;
	display: flex;

	-webkit-flex-direction: column;
	flex-direction: column;

	position: absolute;
	height: 100%;
	width: 100%;
	z-index: 2;
}

.password:not(.active) {
	display: none;
}

.password-submit {
	-webkit-flex: 1;
	flex: 1;
}

.password-input {
	height: 100%;

	-webkit-flex: auto;
	flex: auto;

	text-align: center;
}

.waiting {
	-webkit-animation: pulse-grey 1s ease-in-out infinite;
	animation: pulse-grey 1s ease-in-out infinite;

	cursor: default;
}

@-webkit-keyframes pulse-grey {
	0% {
		background: white;
	}

	50% {
		background: #ddd;
	}

	100% {
		background: white;
	}
}

@keyframes pulse-grey {
	0% {
		background: white;
	}

	50% {
		background: #ddd;
	}

	100% {
		background: white;
	}
}

.error {
	-webkit-animation: pulse-red 0.5s ease-in-out;
	animation: pulse-red 1s ease-in-out;
}

@-webkit-keyframes pulse-red {
	0% {
		background: white;
	}

	50% {
		background: #ddd;
	}

	100% {
		background: white;
	}
}

@keyframes pulse-red {
	0% {
		background: white;
	}

	50% {
		background: #f99;
	}

	100% {
		background: white;
	}
}

.aside {
	box-shadow: 0 0 2vh #aaa;
	z-index: 1;
}

.nav {
	display: -webkit-flex;
	display: flex;
}

.input, .song {
	padding: 10px;
}

.input {
	-webkit-appearance: none;

	box-sizing: border-box;
	border-radius: 0;
	border: none;
	display: block;

	-webkit-flex: auto;
	flex: auto;

	margin: 0;
	outline: none;
}

.search {
	width: 100%;
	flex: auto;
}

.button, .song {
	cursor: pointer;
}

.button {
	background: #ddd;
	font-size: 20px;
}

.songs {
	-webkit-flex: 1;
	flex: 1;

	-webkit-overflow-scrolling: touch;
	overflow-y: scroll;
}

.song {
	background: white;
}

.songs > * {
	margin-bottom: 2px;
}

.songs > :last-child {
	margin-bottom: 0px;
}

.songs.searching > :not(.match) {
	display: none;
}

.tag {
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}

.tag:not(.title) {
	color: grey;
	font-size: 14px;
}

.title {
	color: black;
	font-weight: bold;
}

.control:not(.waiting):not(.playing):not(.paused) {
	display: none;
}

.control.paused:not(.waiting) {
	background: #ddd;
}

::-ms-clear, ::-ms-reveal {
	display: none;
}

